Fix padding problem in dark mode toggle [ISSUE-54]

--- a/css/toggle.css
+++ b/css/toggle.css
@@ -27,6 +27,7 @@ input {
 	width: 0;
 	height: 0;
 	visibility: hidden;
+   display: none;
 }
 
 label:active:after{
@@ -64,19 +65,4 @@ input:checked + label:after {
 	left:49px;
 	transform: translateX(-100%);
 	background: linear-gradient(180deg,#777,#3a3a3a);
-}
-
-.darkmode_toggle_container{
-   padding: 0;
-   margin: 0;
-}
-
-.darkmode_toggle_container input{
-   padding: 0;
-   margin: 0;
-}
-
-.darkmode_toggle_container #darkmode_toggle {
-   padding: 0;
-   margin: 0;
 }
